@@ -4,6 +4,7 @@ New features:
 A.F....... [ZBX-1357] updated German, Japanese, Italian, Romanian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)
 A.F....... [ZBX-5735] fixed debug mode check condition to use less memory when debug is off (Ivo)
 
 --------------------------------------------------------------------------------
@@ -1421,6 +1422,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.19rc1
 
+..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)
 
 Changes for 1.8.18
 
